--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,8 +12,7 @@
     data-sap-ui-resourceroots='{"sap.ui.demo.walkthrough": "./"}'></script>
 </head>
 
-<body>
-  <div>Hello World</div>
+<body class="sapUiBody" id="content">
 </body>
 
 </html>
