--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,12 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SAPUI5 Walkthrough</title>
   <script id="sap-ui-bootstrap" src="https://sdk.openui5.org/resources/sap-ui-core.js" data-sap-ui-theme="sap_belize"
-    data-sap-ui-libs="sap.m" data-sap-ui-compatVersion="edge" data-sap-ui-async="true"
-    data-sap-ui-onInit="module:sap/ui/demo/walkthrough/index"
-    data-sap-ui-resourceroots='{"sap.ui.demo.walkthrough": "./"}'></script>
+    data-sap-ui-resourceroots='{"sap.ui.demo.walkthrough": "./"}'
+    data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" data-sap-ui-compatversion="edge" data-sap-ui-async="true">
+    </script>
 </head>
 
 <body class="sapUiBody" id="content">
+  <div data-sap-ui-component data-name="sap.ui.demo.walkthrough" data-id="container"
+    data-settings='{"id": "walkthrough"}'></div>
 </body>
 
 </html>
