--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -21,8 +21,8 @@
 </head>
 
 <body>
-  <div id="qunit" />
-  <div id="qunit-fixture" />
+  <div id="qunit"></div>
+  <div id="qunit-fixture"></div>
 </body>
 
 </html>
